Fix the inconcistent spacing between rows & cols

--- a/styles.css
+++ b/styles.css
@@ -15,18 +15,18 @@ body {
 
 .container {
   width: 350px;
-  height: 480px;
-  background-color: #000;
+  height: 500px;
   padding: 25px;
+  background-color: #000;
   display: flex;
   flex-wrap: wrap;
   align-content: space-between;
-  border-radius: 25px;
+  border-radius: 20px;
 }
 
 .screen {
   width: 100%;
-  height: 71px;
+  height: 65px;
   background-color: #9ccc63;
   border-radius: 10px;
   display: flex;
@@ -36,13 +36,14 @@ body {
 }
 
 .btn-container {
-  width: 25%;
-  text-align: center;
+  width: 100%;
+  height: 65px;
+  display: flex;
+  justify-content: space-between;
 }
 
 button {
-  width: 80%;
-  height: 56px;
+  width: 65px;
   border-radius: 10px;
   font-size: 2rem;
   border: none;
@@ -62,9 +63,9 @@ button {
 }
 
 button:hover {
-  border: 1px solid;
+  opacity: .5;
 }
 
 button:active {
-  border: none;
+  opacity: 1;
 }
